fix alignment, fixes #11653
git-svn-id: svn://develop.studip.de/studip/trunk@62373 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/resources/assets/stylesheets/scss/contents.scss
+++ b/resources/assets/stylesheets/scss/contents.scss
@@ -23,13 +23,12 @@
     list-style: none;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(250px, 100%), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(150px, 100%), 1fr));
     grid-gap: 10px;
 
     .content-item {
         text-align: center;
         border: solid thin $content-color-40;
-
         .content-item-link {
             display: block;
             padding: 10px;
@@ -64,7 +63,7 @@
     }
 }
 
-@include media-breakpoint-small-down() {
+@media (max-width: 820px) {
     .content-items {
         grid-template-columns: 100%;
     }
